--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Luxurious+Script&family=MonteCarlo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap');
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'PierSans';
+  src: url('/fonts/PPPierSans-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'EditorialNew';
+  src: url('/fonts/PPEditorialNew-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'EditorialNewItalic';
+  src: url('/fonts/PPEditorialNew-Italic.otf') format('opentype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'EditorialNewLight';
+  src: url('/fonts/PPEditorialNew-Ultralight.otf') format('opentype');
+  font-weight: lighter;
+  font-style: lighter;
+}
+
+@font-face {
+  font-family: 'EditorialNewBold';
+  src: url('/fonts/PPEditorialNew-Ultrabold.otf') format('opentype');
+  font-weight: bold;
+  font-style: bold;
+}
+
+@font-face {
+  font-family: 'EditorialNewBoldItalic';
+  src: url('/fonts/PPEditorialNew-UltraboldItalic.otf') format('opentype');
+  font-weight: bold;
+  font-style: italic;
+}
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #fff;
     --foreground: #ededed;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.font-script {
+  font-family: 'MonteCarlo', cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-sans {
+  font-family: 'EditorialNew', sans-serif;
+}
+
+.font-sans-light {
+  font-family: 'EditorialNewLight', sans-serif;
+}
+
+.font-sans-italic {
+  font-family: 'EditorialNewItalic', sans-serif;
+}
+
+.font-sans-bold {
+  font-family: 'EditorialNewBold', sans-serif;
+}
+
+.font-sans-bold-italic {
+  font-family: 'EditorialNewBoldItalic', sans-serif;
+}
+
+.font-marquee {
+  font-family: "Allerta Stencil", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+  position: relative;
 }
