--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,36 +10,29 @@
 }
 
 @font-face {
-  font-family: 'EditorialNew';
-  src: url('/fonts/PPEditorialNew-Regular.otf') format('opentype');
+  font-family: 'FitzgeraldRegular';
+  src: url('/fonts/HV Fitzgerald Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'EditorialNewItalic';
-  src: url('/fonts/PPEditorialNew-Italic.otf') format('opentype');
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'EditorialNewLight';
-  src: url('/fonts/PPEditorialNew-Ultralight.otf') format('opentype');
-  font-weight: lighter;
-  font-style: lighter;
-}
-
-@font-face {
-  font-family: 'EditorialNewBold';
-  src: url('/fonts/PPEditorialNew-Ultrabold.otf') format('opentype');
+  font-family: 'FitzgeraldBold';
+  src: url('/fonts/HV Fitzgerald Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: bold;
 }
 
 @font-face {
-  font-family: 'EditorialNewBoldItalic';
-  src: url('/fonts/PPEditorialNew-UltraboldItalic.otf') format('opentype');
+  font-family: 'FitzgeraldRegularItalic';
+  src: url('/fonts/HV Fitzgerald Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'FitzgeraldBoldItalic';
+  src: url('/fonts/HV Fitzgerald Bold Italic.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
 }
@@ -63,23 +56,23 @@
 }
 
 .font-sans {
-  font-family: 'EditorialNew', sans-serif;
+  font-family: 'FitzgeraldBold', sans-serif;
 }
 
 .font-sans-light {
-  font-family: 'EditorialNewLight', sans-serif;
+  font-family: 'FitzgeraldRegular', sans-serif;
 }
 
 .font-sans-italic {
-  font-family: 'EditorialNewItalic', sans-serif;
-}
-
-.font-sans-bold {
-  font-family: 'EditorialNewBold', sans-serif;
+  font-family: 'FitzgeraldRegularItalic', sans-serif;
 }
 
 .font-sans-bold-italic {
-  font-family: 'EditorialNewBoldItalic', sans-serif;
+  font-family: 'FitzgeraldBoldItalic', sans-serif;
+}
+
+.font-sans-bold {
+  font-family: 'FitzgeraldBold', sans-serif;
 }
 
 .font-marquee {
